test/types/range/deitz/test_int8_range_big_stride.good
test_int8_range_big_stride.chpl:1: error: in the 'by' operator, there is no implicit conversion from the type of the step argument, int(64), to the type required by the range argument, int
