test/types/range/deitz/test_int8_range_big_stride.chpl
var r = 1..100 by 4294967298;
writeln(r);
writeln(typeToString(r.type));
